force-app/main/default/objects/PO_Alert_Log__c/PO_Alert_Log__c.object-meta.xml
<CustomObject>
    <description>Audit trail of PO Low Balance alerts fired by the PO_Low_Balance_Alert flow. One record per notification sent.</description>
    <label>PO Alert Log</label>
    <nameField>
        <displayFormat>PAL-{00000000}</displayFormat>
        <label>PO Alert Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Alert Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>