force-app/main/default/objects/PO_Alert_Log__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Balance</fullName>
                <default>true</default>
                <label>Low Balance</label>
            </value>
            <value>
                <fullName>Balance Recovered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>