force-app/main/default/objects/PO_Alert_Log__c/fields/Percent_Remaining_At_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Percent_Remaining_At_Trigger__c</fullName>
    <label>Percent Remaining At Trigger</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>