force-app/main/default/objects/PO_Alert_Log__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>PO Alert Logs Received</relationshipLabel>
    <relationshipName>PO_Alert_Logs_Received</relationshipName>
    <type>Lookup</type>
</CustomField>