force-app/main/default/objects/PO_Alert_Log__c/fields/Remaining_Balance_At_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance_At_Trigger__c</fullName>
    <label>Remaining Balance At Trigger</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>