force-app/main/default/objects/PO_Alert_Log__c/fields/Triggered_At__c.field-meta.xml
<CustomField>
    <fullName>Triggered_At__c</fullName>
    <label>Triggered At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>