force-app/main/default/objects/PO_Alert_Log__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>PO Alert Logs</relationshipLabel>
    <relationshipName>PO_Alert_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>